--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 # subdirectories
 __pycache__/
-data/
+data_collection/data/
 one_off_scripts/
-tesseract_errors/
 
-# sikuli scripts for now, until I clean out local directory info
-spotify_desktop.sikuli/
-
-# individual files
-spotify_keys.py
-
+# local directory information
+data_collection/spotify_api/spotify_keys.py
+data_collection/spotify_desktop.sikuli/local_dirs*
 
 # Best practices
 # Compiled source #
